finally found join write-up bug.

--- a/CSS/DCF-common.html
+++ b/CSS/DCF-common.html
@@ -58,7 +58,42 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 -->
 
 <!-- UNCOMMENT THE NEXT LINE FOR PRODUCTION -->
-<!-- link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lora" -->
+<!--
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lora">
+-->
+
+
+
+
+
+<div class="table-scroller300">
+
+<pre class="r"><code>cat(&quot;say what? \n\nsay what? \n\nsay what? \n\nsay what? \n\nsay what? \n\nsay what? \n\nsay what? \n\nsay what? \n\nDON'T say what? \n\nsay what? \n\nsay what? \n\nsay what? \n\nsay what? \n\nsay what? \n\nsay what? \n\nsay what? \n\nsay what? \n\nsay what? \n\nsay what? \n\nsay what? \n\nsay what? \n\nsay what? \n\nsay what? \n\nsay what? \n\n&quot;)</code></pre>
+<p>say what?</p>
+<p>say what?</p>
+<p>say what?</p>
+<p>say what?</p>
+<p>say what?</p>
+<p>say what?</p>
+<p>say what?</p>
+<p>say what?</p>
+<p>DON’T say what?</p>
+<p>say what?</p>
+<p>say what?</p>
+<p>say what?</p>
+<p>say what?</p>
+<p>say what?</p>
+<p>say what?</p>
+<p>say what?</p>
+<p>say what?</p>
+<p>say what?</p>
+<p>say what?</p>
+<p>say what?</p>
+<p>say what?</p>
+<p>say what?</p>
+<p>say what?</p>
+<p>say what?</p>
+</div>
 
 
 </div>
