Wide and narrow added to notes

--- a/CourseNotes/Rank/DraftNarrative.html
+++ b/CourseNotes/Rank/DraftNarrative.html
@@ -52,14 +52,6 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 
 
 
-<div id="TOC">
-<ul>
-<li><a href="#biggest-and-smallest">Biggest and Smallest</a><ul>
-<li><a href="#ties">Ties</a></li>
-<li><a href="#examples">Examples</a></li>
-</ul></li>
-</ul>
-</div>
 
 <!--
 % Common elements of a DCF document
@@ -79,8 +71,8 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 
 
 
-<div id="biggest-and-smallest" class="section level2">
-<h2>Biggest and Smallest</h2>
+<div id="biggest-smallest-and-inbetween" class="section level2">
+<h2>Biggest, smallest, and inbetween</h2>
 <p>Many questions take forms such as these:</p>
 <ul>
 <li>“Find the largest …”</li>
@@ -277,6 +269,25 @@ Groups: year
 401     Emma   F 20788 2013
 402   Olivia   F 18256 2013</code></pre>
 <p>If there is a tie, there’s no guarantee that any of the names will be in 3rd place: they might tie for 4th place. Using <code>row_number()</code> instead of rank would help here.</p>
+<p>Please use the comment system to make suggestions, point out errors, or to discuss the topic.</p>
+<div id="disqus_thread">
+
+</div>
+<script type="text/javascript">
+/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+var disqus_shortname = 'dcf2014'; // required: replace example with your forum shortname
+
+/* * * DON'T EDIT BELOW THIS LINE * * */
+(function() {
+  var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+  dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+  (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+})();
+</script>
+<noscript>
+Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+</noscript>
+<p><a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a></p>
 </div>
 </div>
 </div>
